# codecademy_courses

./: README.md  test
Learn_CPP/C5_loops_challenge_project/: a.out
Learn_CPP/C7_functions/: readme.md
archive/nutting/: 22-oct-20.rs  22_oct_15.rs  22_oct_6.cpp  22_oct_8.rs  a.out
codecademy/Flask_Python/: 4_1_1_1-Front_and_Back.py  4_1_1_2-The_Web_Server.py  4_1_1_4-Storing_Data.py  4_1_1_6-Authorization_and_Authentication.py  4_1_1_8-Review.py  4_1_2_Article-HTTP_Requests.py  4_1_3_1-Introduction.py  4_1_4_Project-Adopt_a_Pet.py  4_2_1_3-Template_Variables.py  4_2_1_4-Variable_Filters.py  4_2_1_5-If_Statements.py  4_2_1_6-For_Loops.py  4_2_1_7-Inheritance.py  4_2_1_7-base.html  4_2_2_1-Introduction_Flask_Forms.py  4_2_2_2-Flask_Request_Object.py  4_2_2_3-base.html  4_2_2_4-FlaskForm_Class.py  4_2_2_5-Template_Form_Variables.py  4_2_2_6-Handling_FlaskForm_Data.py  4_2_2_8-More_Form_Fields.py  4_2_2_8-app.py  4_2_2_8-forms.py  4_2_2_8-index.html  4_2_2_9-Redirecting.py  README.md  forms.py  locations.html  locations.py
codecademy/JavaScript/: 1_1_1-Console.js  1_1_2-Comments.js  1_1_3-DataTypes.js  1_1_4-ArithmeticOperators-js  1_1_5-StringConcatenation.js  1_1_6-Properties.js  1_1_7-Methods.js  README.md
codecademy/Python3/: 10_1_4_Writing_a_File.py  10_1_7_What_Is_a_CSV_File.py  10_3_1_Project_Hacking_The_Fender.py  (+98 more)
codecademy/rust/a3_metadata_toml/: Cargo.toml
did_not_do_anything_today_fml/: 22-oct-20  22_nov_11  22_nov_11.rs  22_oct_7  22_oct_7.rs  22_oct_8
fagskolen/: gathering.md
rust/: README.md
rust_v2/: README.md
tmp_conf_fils/: alacritty.yml
(+2006 files in other folders)
